frontend/src/chat/infobar/infobar.scss
@import "src/style.scss";

.right-sidebar {
    height: calc(100vh - 64px);
    height: calc(calc(var(--vh, 1vh) * 100) - 64px);
    box-shadow: 0px 1px 2px 1px #aaa;

    li.ant-menu-submenu {

        div.ant-menu-submenu-title {
            box-shadow: 0px 1px 1px 1px $box-shadow;
        }

        ul {
            height: calc(50vh - 265px);
            height: calc(calc(var(--vh, 1vh) * 100) - 265px);
            overflow-y: auto;
            overflow-x: hidden;
        }

        .ant-menu-item {
            padding-left: 16px !important;
        }

        .menu-item {
            display: flex;
            padding: 8px 16px;
            cursor: pointer;

            &:hover {
                background-color: #e6f7ff;
            }

            li {
                flex: 1 1 80%;
            }

            button {
                border: none;
                transform: rotate(90deg);
                background: none;

                svg {
                    font-size: 1.5em;
                    font-weight: bold;
                }
            }
        }
    }

    .profile {
        height: 150px;
        color: white;
        display: grid;
        grid-template-rows: 1fr 45px;
        justify-items: center;
        align-items: center;

        span {
            align-self: flex-end;
        }
    }

    .no-users {
        padding: 16px 32px;
    }
}

.right-sidebar-mobile {
    @extend .right-sidebar;
    position: absolute !important;
    top: 64px;
    right: 0px;
    width: 0px;
    transition: right 0.2s;

}

.right-sidebar-mobile-shown {
    @extend .right-sidebar-mobile;
    top: 64px;
    width: 200px;
}

